fixes horizontal scrolling on mobile?

--- a/scss/_containers.scss
+++ b/scss/_containers.scss
@@ -11,6 +11,8 @@
 
 	body {
 		background: #fff;
+		width: 100%;
+		overflow-x: hidden;
 
 	}
 	
